# slrwatch

./: .gitignore  Makefile  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: regime_rules.yml  source_manifest.yml  variables.yml
data/reference/: insured_bank_metadata_overrides.csv  insured_bank_treatment_map_2020.csv  v1_universe.csv
data/sample/: README.md  headroom_demo_input.csv  headroom_demo_output.csv  universe_template.csv
output/reports/constraint_decomposition/: family_alignment_summary.csv  regime_summary.csv
site/: index.html
site/assets/css/: style.css
site/assets/data/: constraint_decomposition.json  event_study.json  intermediation.json  market_context.json  parent_transmission.json  policy_regimes.json  reallocation.json  safe_assets.json
site/assets/js/: main.js
src/slr_watch/: __init__.py  cli.py  config.py  headroom.py  insured_banks.py  models.py  panels.py  pipeline.py  quarters.py  rules.py  site_data.py  source_manifest.py  variables.py
src/slr_watch/analytics/: __init__.py  constraint_decomposition.py  event_2020.py  (+8 more)
tests/: test_call_reports_pipeline.py  test_constraint_decomposition.py  test_event_2020.py  test_fdic_institutions.py  test_fry15.py  test_fry9c_pipeline.py  test_headroom.py  test_insured_banks.py  test_market_context.py  test_market_overlays.py  test_panels.py  test_parent_transmission.py  test_policy_regime_panel.py  test_public_claim_sync.py  test_quarters.py  test_reallocation_2020.py  test_rules.py  test_safe_asset_absorption.py  test_site_data_sync.py  test_treasury_intermediation.py
(+10 files in other folders)
